# open62541Cpp

./: .gitmodules  CMakeLists-nodeset.txt  CMakeLists.txt  CMakeSettings.json  Common.cmake  README.md
bea-model/: Nodes.csv  TFS.Bea.Nodeset2.xml  TFS.Bea.Types.bsd
examples/: examples_common.cmake
examples/TestClient/: CMakeLists.txt
examples/TestEventClient/: CMakeLists.txt  main.cpp
examples/TestServer/: testmethod.h
include/open62541cpp/: open62541server.h
src/: CMakeLists.txt  discoveryserver.cpp  main.c  open62541server.cpp
